--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>TZJanosi</groupId>
-    <artifactId>JDBCTemplateH2Example</artifactId>
+    <artifactId>JPAH2Example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
